--- a/Data/READMEs/RM_ANN.Rmd
+++ b/Data/READMEs/RM_ANN.Rmd
@@ -10,73 +10,79 @@ html_document: default
 
 # 1. Introduction
 
-The goal of this project is to make a prediction about the likelilhood of College Football (CFB) players to be drafted into the professional football league (NFL). In order to achieve this, different aspects of a CFB player's college career are being used as features $p_{1}, ..., p_{n}$. These include game statistics such as rush attempts `Rush.Att` or yards ran after a pass `Pass.Yard`. To solve this problem, one of the methods employed is a random forest classifier (RF). RF is an ensemble learning method (a method comprised of different methods) that constructs multiple small decision trees that are ineffective on their own but exceedingly effective when combining the individual trees to output the class which is the mode of all individually predicted classes. Through this process of combining individually "useless" trees into a "forest", this model is very effective in combatting overfitting the training set (i.e. learning very specific patterns in the training data and therefore showing low bias but high variance) which is prevalent in regular decision tree models.
+The goal of this project is to make a prediction about the likelilhood of College Football (CFB) players to be drafted into the professional football league (NFL). In order to achieve this, different aspects of a CFB player's college career are being used as features $p_{1}, ..., p_{n}$. These include game statistics such as rush attempts `Rush.Att` or yards ran after a pass `Pass.Yard`. To solve this problem, one of the methods employed is an artificial neural network (ANN). ANNs consist of connected nodes and are not too dissimilar to a human brain in that they derive their "intelligence" from the structure of their "neurons" and the strength of the "synapses" (edges) between these nodes. For this project, an ANN with one input layer with the size of the number of features in the underlying dataset, one hidden layer with ten nodes and an output layer of the size of one was used to solve the CFB player classification problem. The main advantages of ANN include its ability to model complex, non-linear relationships between input and output variables, its ability to infer generalized relationships on data it has never seen before, its robustness towards local minima in the cost function as well as its universality property, meaning it can fit any problem, provided it is sufficiently large.
 
-# 2. Bootstrap aggregation and feature bagging
+# 2. ANN Setup and Backpropagation
 
-In order to build the individual decision trees within the RF model, bootstrap aggregation (bagging) is conducted. This process assembles individual sample bags $X_{b}$ and labels $Y_{b}$ of training data through drawing randomly with replacement from the entire pool of training data $x_{1},...,x_{n}$ with the corresponding labels $y_{1},...,y_{n}$. For every one of these bags $b=1,...,B$, a classification (or regression) decision tree $f_{b}$ is fitted and subsequently the majority vote is used in classification problems or averaged over all bags $b$ in regression problems:
+The feedforward ANN used in this project is set up with three layers: an input layer of the size of the number of features in the data, one hidden layer consisting of ten nodes and an output layer containing a single node. Having one hidden layer was deemed to be sufficient due to the complexity of the underlying problem and the rule of thumb commonly used to determine the size of the hidden layer is to take the mean between the number of nodes in the input layer and the output layer. The output layer was constructed to have one single node because the classification problem at hand only determines between levels of one class (drafted or not). A more generalized approach to ANN setup with respects to the hidden layer would be to go through the process of pruning, meaning starting out with a number of nodes that is rather too large for the underlying problem and then subsequently eliminating acitvations with corresponding weights close to zero.
 
-$$\hat{f}=\frac{1}{B}\sum_{b=1}^{B} f_{b}(X_{b})$$
-This process of using many smaller and "less intelligent" trees in combination reduces variance by prohibiting one single tree of fitting the entire training set too closely. This would come at the cost of a higher bias when simply training many smaller trees on correlated samples of training data. Because the bags are assembled randomly with replacement, bootstrapping de-correlates the individual bags which in turn allows the RF model to reduce variance without increasing bias.
+In order to train the ANN, a process called backpropagation is applied. This refers to the act of feeding labeled data into the network, analyzing the cost (squared difference between the desired and actual output) of the current combination of biases $b_{1},...,b_{i}$, activations $a_{1},...,a_{i}$ and weights $w_{1},...,w_{i}$ and adjusting according to their influence on any given node in the direction of greatest descent in the cost function $\nabla_{a}C$. Every acitvation $a_L$ of layer $L$ is given by the activation function $\sigma'(z_{L})$ with $z_{L}=w_{L}a_{L-1}+b_{L}$. In this project a logistic function was chosen as the activation function:
 
-The second measure to enhance RF performance used on top of bootstrapping is sample bagging. Through the random selection of a subset of features to train on for every tree in the model, correlation between the trees is further reduced. If certain features are very strong predictors of the ouput, using them on all sub-trees would correlate them and therefore yield a higher bias. In the script, the default value of features for classification $\sqrt{p}$ is passed as the `mtry` argument due to time constraints of this project and the increase of computing time associated with extended tuning, however the optimal number depends on the training data and should therefore be treated as a tuning parameter in the future.
+$$\sigma'(z)=\frac{1}{1+e^{-z}}$$
+
+Subsequently, all changing effects for all neurons in the network are added together and propagated backwards through the network, hence the name backpropagation. This is repeated for all instances of training data resulting in an average change over all training data which is proportional to the negative gradient of the cost function:
+
+$$\delta_L=\nabla_aC\odot\sigma'(z_L)$$
+
+Because every activation is dependent on the bias $b$ and weight $w$ as well as the connected activations from the previous layer, the total change in the cost function is also dependent on the $z$ which sums up these values for the previous layer (the layer index $L$ is given as a superscript):
+
+$$\frac{\partial C_0}{\partial w^{L}}=\frac{\partial z^L}{\partial w^L}\frac{\partial a^L}{\partial z^L}\frac{\partial C_0^L}{\partial a^L}$$
+
+When combined with the sensitivity of the cost function to changes in bias $\frac{\partial C_0}{\partial b^L}$, this yields the combined change to be made (the previous layer is indexed by $k$ and the current layer is indexed by $j$):
+
+$$\frac{\partial C}{\partial w_{jk}^l}=a_{k}^{l-1}\delta_j^l\,\, and \,\,\frac{\partial C}{\partial b_j^l}=\delta_j^l, \,\, with\,\,\delta^l=((w^{l+1})^T\delta^{l+1})\odot\sigma'(z^l)$$
 
 # 3. Data Standardization
 
-Because the goal of RF is to obtain a set of partition rules to make a classification decision, it is not sensitive to differently scaled or centered features and therefore does not change depending on monotonic transformation of the input data. This means that there is no need to standardize the data used, event though it is differently scaled across features (see [RM_DataHandling](https://github.com/NicSchuler/DSF_NFLDraftPrediction/tree/master/Data/READMEs))
+Because an ANN posesses the ability to infer generalized relationships on the training data without imposing any limitations on distribution etc., it is not sensitive to differently scaled or centered features and therefore does not change depending on monotonic transformation of the input data. This means that there is no need to standardize the data used, event though it is differently scaled across features (see [RM_DataHandling](https://github.com/NicSchuler/DSF_NFLDraftPrediction/tree/master/Data/READMEs))
 
 # 4. Tuning the model
 
-In this project 10-fold cross validation was used to determine the optimal number of trees (`ntree`) to use in the RF model. For every position (`QB`, `RB`, `WR` and `all`), 10 folds of training data were fitted to an iteration of the RF model and its performance was tested. In the R script this is realized in the `perfFun(x)` function:
-
-```{r eval=FALSE}
-perfFun <- function(TP, FP, TN, FN){
-  accuracy <- (TP + TN)/(TP + FP + TN + FN)
-  precision <- TP/(TP + FP)
-  recall <- TP/(TP + FN)
-  F1 <- 2*((precision*recall)/(precision + recall))
-  out <- data.frame("Accuracy" = accuracy, "Precision" = precision, "Recall" = recall, "F1" = F1)
-  return(out)
-}
-```
-
-To limit computation time, only 10 intervals of 100 trees were tested, which leaves the possibility of better performance when testing on a more granular level. As discussed above, an additional parameter to tune would be the number of features used in the feature bagging process.
+As previously described, the ANN model could be tuned in terms of number of hidden layers and especially on the number of nodes in the hidden layer(s). Due to time and ressource constraints of this project, this is not done in the ANN script, which leaves room for future improvement. For the case at hand it is simply assumed to be sufficient to have one hidden layer and the number of hidden nodes is determined by the general rule of thumb descriped above. As the topic of ANNs is exceedingly deep, there are a multitude of optimization functions available to optimize ANN performance such as the Beale function, which, again due to project constraints, have been neglected in this project.
 
 # 5. Implementation in R
 
-The application of RF in R is explained below. All code is included in the [RF script](https://github.com/NicSchuler/DSF_NFLDraftPrediction/blob/master/Project_Scripts/RandomForest.R) and step-by-step comments are provided.
+The application of ANN in R is explained below. All code is included in the [ANN script](https://github.com/NicSchuler/DSF_NFLDraftPrediction/blob/master/Project_Scripts/ANN.R) and step-by-step comments are provided.
 
-## 5.1 Training the RF Model
+## 5.1 Training the ANN Model
 
-For training the data from years 2007 to 2013 of all unsampled and sampled datasets are used respectively. The RF model is built and trained using the `randomForest` package. As previouly described, the model is tuned for the optimal number of trees to use, which is passed as the `ntrees` parameter to the `ntree = ` argument.
+For training the data from years 2007 to 2013 of all unsampled and sampled datasets are used respectively. The ANN model is trained using the `nlminb()` function of the `h2o` package which implements quasi-Newton optimization methods. These are used in order to reduce computational power that would be needed for full Newton's methods in order to find the twice differentiable global minimum of a complex non-linear function.
 
 ```{r eval=FALSE}
-RF_QB <- randomForest(y ~ ., data = x, ntree = ntrees)
+BP_pred <- nlminb(start = ANN_par,
+                 objective = ANN_cost, 
+                 gradient = ANN_grad,
+                 hessian = NULL,
+                 L_i_size = L_i_size,
+                 L_h_size = L_h_size,
+                 L_o_size = L_o_size,
+                 x = x, y = y,
+                 lambda = 1,
+                 control = options)
 ```
-To make predictions for the testing data, the `predict.randomForest` function is used. For the probability cutoff value 0.5 is used by default. Because the project works with classification, this value is the fraction of votes for one of the classes, so a cutoff of 0.5 can be understood as a majority vote by the different features.
+
+As the `start` parameter, the combined thetas containing only 1s is passed. The `ANN_cost` and `ANN_grad` functions have been previously defined as the cost and gradient function to optimize. The `L_i_size`, `L_h_size` and `L_o_size` arguments define the dimensions of the input, hidden and output layers as described above.
+
+The resulting vetor of the two thetas is then saved to be used for prediction on unlabeled testing data later on:
 
 ```{r eval=FALSE}
-pred <- as.integer(as.vector(predict(RF_QB, x_test)))
+BP_par <- BP_pred$par
 ```
  
 ## 5.2 Variable Importance
 
-The RF model can be used to determine variable importance. To achieve this, a RF is fitted to the data, features are subsequently perturbated individually and the change in average out-of-bag (OOB) error is compared among the features. The resulting comparison allows for statements about the variable importance (i.e. the feature yielding the biggest difference in OOB error having the greatest impact). To visualize variable importance in this project, the Mean Decrease in Gini for all features was plotted for all positions and all sampling methods. Higher Mean Decrease in Gini indicates higher variable importance.
-
-![](RM_randomForest_files/variable_importance.jpg)
-
-Because the datasets do not include categorical variables with multiple levels, variable importance is not biased towards features with more levels. To gain advanced insight into the variable importance of the prediction, further analysis is needed and error inducing factors such as correlation in features should be explored, which exceed the scope of this project.
+Largely due to the universality property of ANNs, variable importance and the construction of hypermodels including preliminary methods for variable selection have not been implemented. This is following the logic that an ANN should be capable of dealing with a mixture of features of differing importance by assigning very small weights to the corresponding nodes. Because it is not clear if the neural network is tuned optimally, it is not possible to give statements about the universality of the specific ANN used in this project. Because there is a possibility that the underlying ANN is oversimplified in respects to the problem at hand, this leaves room for future improvement.
 
 ## 5.3 Model Performance
 
-In order to gain an oversight of the model performance, the cross validated models are tested on their training and testing (using the year 2014) fit for all positions and all sampling methods. Both are based on unsampled data, allowing for the model's predictive ability on imbalanced class sizes, as they occur in the underlying business case, to be analyzed. The training and testing data performance can be viewed below (also see the [between model comparison](https://github.com/NicSchuler/DSF_NFLDraftPrediction/blob/master/Data/READMEs/RM_PerformanceMeasurement.pdf)):
+In order to gain an oversight of the model performance, the ANN models are tested on their training (using the years 2007 through 2013) and testing (using the year 2014) fit for all positions and all sampling methods. Both are based on unsampled data, allowing for the model's predictive ability on imbalanced class sizes, as they occur in the underlying business case, to be analyzed. The training and testing data performance can be viewed below (also see the [between model comparison](https://github.com/NicSchuler/DSF_NFLDraftPrediction/blob/master/Data/READMEs/RM_PerformanceMeasurement.pdf)):
 
 ```{r, include=FALSE}
 library(tidyverse)
-load("../PerformanceMeasurement/randomForestPerfMeas.Rdata")
-load("../PerformanceMeasurement/randomForestPerfMeas2014.Rdata")
+load("../PerformanceMeasurement/ANNPerfMeas.Rdata")
+load("../PerformanceMeasurement/ANNPerfMeas2014.Rdata")
 ```
 ```{r echo = FALSE}
-knitr::kable(randomForestPerfMeas, caption = "training data performance")
-knitr::kable(randomForestPerfMeas2014, caption = "testing data performance")
+knitr::kable(ANNPerfMeas, caption = "training data performance")
+knitr::kable(ANNPerfMeas2014, caption = "testing data performance")
 ```
